[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[tool.black]
force-exclude = 'test_data/samples/*'
line_length = 79

[tool.distutils.bdist_wheel]
universal = 1

[tool.isort]
extend_skip = ["test_data/samples"]
line_length = 79
multi_line_output = 3
profile = "black"

[tool.mypy]
exclude = "test_data/samples/*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "pathspec"

