[bdist_wheel]
universal = 1

[metadata]
name = ssort
version = attr: ssort.__version__
license = MIT
license_file = LICENSE
description = The python statement sorter
long_description = file: README.rst
author = Ben Mather
author_email = bwhmather@bwhmather.com
maintainer = Ben Mather
maintainer_email = bwhmather@bwhmather.com
url = https://github.com/bwhmather/ssort
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Quality Assurance

[options]
package_dir=
    =src
packages = find:

install_requires=
python_requires = >=3.8

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    ssort = ssort._main:main
